Replaced the skip parameter to olderThan parameter in the feed endpoints
